--- a/app/src/main/res/layout/patient_data_frag.xml
+++ b/app/src/main/res/layout/patient_data_frag.xml
@@ -48,79 +48,64 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="144dp"
-        android:layout_height="117dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:id="@+id/imageView3"
+        android:layout_width="0dp"
+        android:layout_height="165dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="11dp"
         android:src="@drawable/patient_ikon"
-        app:layout_constraintEnd_toStartOf="@+id/textView4"
+        app:layout_constraintEnd_toStartOf="@+id/patientinformation"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/actionbar_image" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="212dp"
-        android:layout_height="115dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/actionbar_image" />
-
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="376dp"
+        android:id="@+id/patientinformation"
+        android:layout_width="0dp"
+        android:layout_height="164dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/patientinformation_textview"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:padding="5dp"
+        android:text="Patientinformation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2">
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="235dp"
-            android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="149dp"
-            tools:layout_editor_absoluteY="166dp" />
-    </RelativeLayout>
-
-    <Button
-        android:id="@+id/datoKnap"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="4dp"
-        android:text="Angiv dato"
-        app:layout_constraintEnd_toStartOf="@+id/relativeLayout"
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
-
-    <Button
-        android:id="@+id/grafKnap"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="34dp"
-        android:text="Valg af graf"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
-
-    <CalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+    <WebView
+        android:id="@+id/webView2"
+        android:layout_width="367dp"
+        android:layout_height="273dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/datoKnap" />
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/dato_knap"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="55dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginBottom="6dp"
+        android:background="@drawable/edittext_custom"
+        android:text="Dato"
+        app:layout_constraintBottom_toTopOf="@+id/webView2"
+        app:layout_constraintEnd_toStartOf="@+id/patientinformation"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/graf_knap"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="6dp"
+        android:background="@drawable/edittext_custom"
+        android:text="Graf"
+        app:layout_constraintBottom_toTopOf="@+id/webView2"
+        app:layout_constraintEnd_toEndOf="@+id/patientinformation"
+        app:layout_constraintStart_toStartOf="@+id/patientinformation" />
 
 
 </android.support.constraint.ConstraintLayout>
