--- a/app/src/main/res/layout/fragment_patient.xml
+++ b/app/src/main/res/layout/fragment_patient.xml
@@ -249,7 +249,7 @@
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/progbar_other"
         app:layout_constraintEnd_toStartOf="@+id/progressBarText"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/other_stickman"
         app:layout_constraintTop_toBottomOf="@+id/circlebar" />
 
     <TextView
