--- a/app/src/main/res/layout/patient_data_frag.xml
+++ b/app/src/main/res/layout/patient_data_frag.xml
@@ -57,12 +57,12 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="11dp"
         android:src="@drawable/patient_ikon"
-        app:layout_constraintEnd_toStartOf="@+id/patientinformation"
+        app:layout_constraintEnd_toStartOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/patientinformation"
+        android:id="@+id/textView2"
         android:layout_width="0dp"
         android:layout_height="164dp"
         android:layout_marginTop="60dp"
@@ -84,7 +84,7 @@
         android:background="@drawable/edittext_custom"
         android:text="Dato"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/patientinformation"
+        app:layout_constraintEnd_toStartOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/actionbar_image" />
 
@@ -95,8 +95,8 @@
         android:background="@drawable/edittext_custom"
         android:text="Graf"
         app:layout_constraintBaseline_toBaselineOf="@+id/dato_knap"
-        app:layout_constraintEnd_toEndOf="@+id/patientinformation"
-        app:layout_constraintStart_toStartOf="@+id/patientinformation" />
+        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="@+id/textView2" />
 
     <FrameLayout
         android:layout_width="344dp"
