--- a/app/src/main/res/layout/achievement.xml
+++ b/app/src/main/res/layout/achievement.xml
@@ -10,16 +10,29 @@
     <GridView
         android:id="@+id/gridview"
         android:layout_width="0dp"
-        android:layout_height="551dp"
+        android:layout_height="481dp"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:columnWidth="100dp"
         android:numColumns="3"
+
+
         android:stretchMode="columnWidth"
-
-
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/trophies" />
+
+    <TextView
+        android:id="@+id/trophies"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Trofæer"
+        android:fontFamily="serif"
+        android:textSize="24sp"
+        android:typeface="sans"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
