--- a/app/src/main/res/layout/achievement_adapter.xml
+++ b/app/src/main/res/layout/achievement_adapter.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="100dp"
+    android:layout_height="100dp">
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="69dp"
+        android:layout_width="68dp"
         android:layout_height="76dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/baseline_sentiment_very_satisfied_black_48" />
+
+    <ImageView
+        android:id="@+id/gennemforelse"
+        android:layout_width="wrap_content"
+        android:layout_height="11dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/icon"
+        app:srcCompat="@drawable/nuludaf3" />
 </android.support.constraint.ConstraintLayout>
