--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,6 +28,7 @@
     -->
 
     <color name="colorYellow">#FFFF00</color>
-    <color name="colorGreen"> 	#32CD32</color>
+    <color name="colorGreen">#32CD32</color>
+    <color name="colorOrange">#FF8C00</color>
 
 </resources>
