--- a/app/src/main/res/layout/patient_setting_frag.xml
+++ b/app/src/main/res/layout/patient_setting_frag.xml
@@ -113,12 +113,13 @@
         android:id="@+id/column4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:background="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/setting_column"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/notification" />
 
@@ -126,12 +127,13 @@
         android:id="@+id/column5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:background="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/setting_column"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/column4" />
 
@@ -167,19 +169,24 @@
         android:id="@+id/switchSound"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="216dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toEndOf="@+id/soundEffects"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/column5"
+        app:layout_constraintEnd_toEndOf="@+id/column5"
         app:layout_constraintTop_toTopOf="@+id/column5" />
 
     <Switch
         android:id="@+id/switchPOP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="148dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toEndOf="@+id/popupText"
-        app:layout_constraintTop_toTopOf="@+id/column4" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/column4"
+        app:layout_constraintEnd_toEndOf="@+id/column4"
+        app:layout_constraintTop_toTopOf="@+id/column4"
+        app:layout_constraintVertical_bias="0.714" />
 
     <Button
         android:id="@+id/logUd"
