--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -7,21 +7,6 @@
     tools:context=".views.Login_frag"
     android:background="@color/colorBackground">
 
-    <CheckBox
-        android:id="@+id/dataHandling"
-        android:layout_width="302dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="200dp"
-        android:text="@string/PersData"
-        android:textColor="@color/colorGray"
-        android:textStyle="bold|italic"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="226dp"
@@ -40,10 +25,10 @@
     <EditText
         android:id="@+id/brugernavn"
         style="@android:style/Widget.Material.Light.AutoCompleteTextView"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/edittext_custom"
         android:hint="Brugernavn"
@@ -55,10 +40,10 @@
 
     <EditText
         android:id="@+id/kodeord"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/edittext_custom"
         android:hint="Kodeord"
@@ -69,31 +54,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/brugernavn" />
 
-    <CheckBox
-        android:id="@+id/HuskBruger"
-        android:layout_width="wrap_content"
-        android:layout_height="25dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:checked="false"
-        android:text="Forbliv logget ind"
-        android:textColor="@color/colorGray"
-        android:textStyle="bold|italic"
-        app:layout_constraintBottom_toTopOf="@+id/dataHandling"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.147"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logIndKnap" />
-
     <Button
         android:id="@+id/logIndKnap"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="8dp"
         android:background="@drawable/login_knap"
         android:text="Log ind"
         android:textColor="#FFFFFF"
@@ -101,6 +68,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/kodeord" />
+
+    <CheckBox
+        android:id="@+id/HuskBruger"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
+        android:checked="false"
+        android:text="Forbliv logget ind"
+        android:textColor="@color/colorGray"
+        android:textStyle="bold|italic"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logIndKnap" />
+
+    <CheckBox
+        android:id="@+id/dataHandling"
+        android:layout_width="302dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/PersData"
+        android:textColor="@color/colorGray"
+        android:textStyle="bold|italic"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/HuskBruger" />
 
     <TextView
         android:id="@+id/glemtLogin"
