--- a/app/src/main/res/layout/patient_setting_frag.xml
+++ b/app/src/main/res/layout/patient_setting_frag.xml
@@ -60,22 +60,25 @@
 
     <ImageView
         android:id="@+id/column1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_marginTop="4dp"
         android:background="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/setting_column"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profil" />
 
     <ImageView
         android:id="@+id/column2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"
         android:background="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/setting_column"
@@ -86,14 +89,16 @@
 
     <ImageView
         android:id="@+id/column3"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_marginTop="4dp"
         android:background="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/setting_column"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
+        app:layout_constraintHorizontal_bias="0.48"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/column1" />
 
@@ -111,11 +116,11 @@
 
     <ImageView
         android:id="@+id/column4"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"
         android:background="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/setting_column"
@@ -125,11 +130,11 @@
 
     <ImageView
         android:id="@+id/column5"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"
         android:background="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/setting_column"
