--- a/app/src/main/res/layout/fragment_patient.xml
+++ b/app/src/main/res/layout/fragment_patient.xml
@@ -9,8 +9,8 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/previousList"
-        android:layout_width="295dp"
-        android:layout_height="95dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="4dp"
         android:layout_marginTop="8dp"
