Lille animation - Dunno hvad jeg synes om den yet

--- a/app/src/main/res/layout/fragment_patient.xml
+++ b/app/src/main/res/layout/fragment_patient.xml
@@ -11,9 +11,10 @@
         android:id="@+id/previousList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="4dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="8dp"
         android:background="@drawable/categorizer_previous_data"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
@@ -23,9 +24,9 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="116dp"
-        android:layout_height="114dp"
-        android:layout_marginStart="4dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="64dp"
         android:background="@drawable/categorizer_today_data"
         app:layout_constraintStart_toStartOf="parent"
