Forsøg med onclick på datoer

--- a/app/src/main/res/layout/listview_list_item.xml
+++ b/app/src/main/res/layout/listview_list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/linearLayout"
     android:layout_width="60sp"
     android:layout_height="95sp"
     android:orientation="horizontal"
@@ -8,6 +9,7 @@
     android:paddingTop="10dp">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="80dp"
         android:layout_height="wrap_content">
 
