--- a/app/src/main/res/layout/task_complete.xml
+++ b/app/src/main/res/layout/task_complete.xml
@@ -8,12 +8,13 @@
     android:background="@color/colorBlack"
     tools:context=".views.Patient_start_frag"
     >
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:gravity="center"
         android:orientation="vertical"
         android:layout_marginTop="26dp"
+        android:layout_marginLeft="10dp"
         android:layout_height="wrap_content">
 
 
@@ -40,29 +41,40 @@
         android:layout_alignParentBottom="true"
         android:gravity="center"
         android:orientation="vertical"
+        android:layout_marginLeft="10dp"
         android:layout_height="wrap_content">
-
 
 
         <Button
             android:id="@+id/okKnap"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:layout_marginBottom="10dp"
-            android:text="OK"/>
+            android:text="Fortsæt"
+            android:textAllCaps="false"
+            android:gravity="center"/>
 
         <Button
             android:id="@+id/delKnap"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_marginStart="8dp"
             android:layout_marginBottom="107dp"
             android:drawableStart="@drawable/ic_share"
             android:textAllCaps="false"
             android:text="Del"
-            android:textAlignment="center"/>
+            android:gravity="center"/>
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="120dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="120dp"
+        android:layout_marginBottom="200dp"
+        android:layout_marginLeft="150dp"
+        android:src="@drawable/check_sign" />
 
 </RelativeLayout>
