--- a/app/src/main/res/layout/task_complete.xml
+++ b/app/src/main/res/layout/task_complete.xml
@@ -2,29 +2,29 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
     android:background="@color/colorBlack"
-    tools:context=".views.Patient_start_frag"
-    >
+    android:padding="16dp"
+    tools:context=".views.Patient_start_frag">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:layout_marginTop="26dp"
-        android:layout_marginLeft="10dp"
-        android:layout_height="wrap_content">
-
-
-    <TextView
-        android:id="@+id/titel"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Godt gået!"
-        android:textColor="@color/colorWhite"
-        android:textSize="40sp" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="26dp"
+        android:gravity="center"
+        android:orientation="vertical">
+
+
+        <TextView
+            android:id="@+id/titel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Godt gået!"
+            android:textColor="@color/colorWhite"
+            android:textSize="40sp" />
 
         <TextView
             android:id="@+id/textView"
@@ -32,17 +32,17 @@
             android:layout_height="wrap_content"
             android:text="Du har klaret en af dine daglige mål for i dag!"
             android:textColor="@color/colorWhite"
-            android:textSize="15sp"/>
+            android:textSize="15sp" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:gravity="center"
-        android:orientation="vertical"
         android:layout_marginLeft="10dp"
-        android:layout_height="wrap_content">
+        android:gravity="center"
+        android:orientation="vertical">
 
 
         <Button
@@ -50,9 +50,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:gravity="center"
             android:text="Fortsæt"
-            android:textAllCaps="false"
-            android:gravity="center"/>
+            android:textAllCaps="false" />
 
         <Button
             android:id="@+id/delKnap"
@@ -60,9 +60,9 @@
             android:layout_height="45dp"
             android:layout_marginBottom="107dp"
             android:drawableStart="@drawable/ic_share"
-            android:textAllCaps="false"
+            android:gravity="center"
             android:text="Del"
-            android:gravity="center"/>
+            android:textAllCaps="false" />
 
     </LinearLayout>
 
@@ -72,9 +72,9 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginLeft="150dp"
         android:layout_marginTop="120dp"
         android:layout_marginBottom="200dp"
-        android:layout_marginLeft="150dp"
         android:src="@drawable/check_sign" />
 
 </RelativeLayout>
