--- a/app/src/main/res/drawable/login_background.xml
+++ b/app/src/main/res/drawable/login_background.xml
@@ -3,8 +3,8 @@
 
     <gradient
         android:angle="90"
-        android:endColor="#9f1717"
-        android:centerColor="#CA1D1D"
+        android:endColor="#802020"
+        android:centerColor="#9f1717"
         android:startColor="#fc0303"
         android:type="linear" />
     <corners
